2019/qual/a_example.out
  File "/Users/daystram/codes/hashcode/2019/qual/solver.py", line 10
    orientation, _, tags* = sys.stdin.readline().strip().split(" ")
                          ^
SyntaxError: invalid syntax
